--- a/web/customer_home_page.xhtml
+++ b/web/customer_home_page.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
-        <title>Facelet Title</title>
+        <title>SKYLAND</title>
     </h:head>
     <h:body>
         <ui:composition template="template.xhtml">
@@ -29,7 +29,7 @@
 
 
                         <div class="w3-dropdown-hover w3-hide-small w3-hover-red w3-right">
-                            <button class="w3-padding-large w3-button" title="More">USER<i class="fa fa-caret-down" /></button>     
+                            <button class="w3-padding-large w3-button"><h:outputLabel value="USER"/><i class="fa fa-caret-down" /></button>     
                             <div class="w3-dropdown-content w3-bar-block w3-card-4">
                                 <a href="#" class="w3-bar-item w3-button">LOGOUT</a>
                             </div>
