--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -71,9 +71,9 @@
 
                         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
 
-                            <h3>Los Angeles</h3>
+                            <h3>Welcome</h3>
 
-                            <p><b>We had the best time playing at Venice Beach!</b></p>   
+                            <p><b>Welcome to the CMS! Enjoy your time</b></p>   
                         </div>
                     </div>
 
