--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -44,9 +44,9 @@
                     <div class="w3-dropdown-hover w3-hide-small">
                         <button class="w3-padding-large w3-button">FACILITY<i class="fa fa-caret-down" /></button>     
                         <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                            <a href="#" class="w3-bar-item w3-button">RESTAURANTS</a>
-                            <a href="#" class="w3-bar-item w3-button">SPA &amp; RESORT</a>
-                            <a href="#" class="w3-bar-item w3-button">Art &amp; Culture</a>
+                            <a href="#restaurant" class="w3-bar-item w3-button">RESTAURANTS</a>
+                            <a href="#spa-resort" class="w3-bar-item w3-button">SPA &amp; RESORT</a>
+                            <a href="faces/art-culture.xhtml" class="w3-bar-item w3-button">Art &amp; Culture</a>
                         </div>
                     </div>
                     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
@@ -74,7 +74,7 @@
 
                             <h3>Welcome</h3>
 
-                            <p><b>Welcome to the CMS! Enjoy your time</b></p>   
+                            <p><b>Welcome to the Clubhouse! Enjoy your time</b></p>   
                         </div>
                     </div>
 
