--- a/web/spa-resort.xhtml
+++ b/web/spa-resort.xhtml
@@ -1,8 +1,9 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <!--
@@ -28,8 +29,9 @@
         </style>
         <title>Art &amp; Culture</title>
     </h:head>
+
     <h:body>
-        <!-- Navbar -->
+<!-- Navbar -->
         <ui:insert name="bar">
             <div class="w3-top">
 
@@ -52,20 +54,5 @@
                     <a href="faces/login.xhtml" class="w3-padding-large w3-hover-red w3-hide-small w3-right">RESERVATION</a>
                 </div></div>
         </ui:insert>
-        <ui:insert name="content">
-            <div class="w3-container w3-content w3-center w3-padding-64" style="max-width: 800px; min-height:720px" id="band">
-                <h2 class="w3-wide w3-center">Art &amp; Culture</h2>
-                <p class="w3-justify">
-                    Hong Kong Parkview is proud and honoured to host one of the city’s most diverse private art collections. <br/>
-                    The collection is on display for the pleasure of members and visitors alike and has been collected by over <br/>
-                    three generations of Hong Kong Parkview’s owning family. Spanning the Archaic Bronze Age, to Dynastic <br/>
-                    Buddhistic scrolls and sculptures, to modern art, sculptures, paintings and ceramics, these pieces have <br/>
-                    become an iconic and integral part of Hong Kong Parkview identity. You can visit these pieces throughout <br/>
-                    the property and feel free to visit our Reading Room on the level 2.<br/>
-                </p>
-
-            </div>
-        </ui:insert>
     </h:body>
 </html>
-
