--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -44,8 +44,8 @@
                     <div class="w3-dropdown-hover w3-hide-small">
                         <button class="w3-padding-large w3-button">FACILITY<i class="fa fa-caret-down" /></button>     
                         <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                            <a href="#restaurant" class="w3-bar-item w3-button">RESTAURANTS</a>
-                            <a href="#spa-resort" class="w3-bar-item w3-button">SPA &amp; RESORT</a>
+                            <a href="faces/restaurant.xhtml" class="w3-bar-item w3-button">RESTAURANTS</a>
+                            <a href="faces/spa-resort.xhtml" class="w3-bar-item w3-button">SPA &amp; RESORT</a>
                             <a href="faces/art-culture.xhtml" class="w3-bar-item w3-button">Art &amp; Culture</a>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
 
                             <h3>Welcome</h3>
 
-                            <p><b>Welcome to the Clubhouse! Enjoy your time</b></p>   
+                            <p><b>Welcome to the Clubhouse! Enjoy your time.</b></p>   
                         </div>
                     </div>
 
@@ -83,9 +83,9 @@
 
                         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
 
-                            <h3>New York</h3>
+                            <h3>Greatful View</h3>
 
-                            <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+                            <p><b>The best view are in Clubhouse.</b></p>    
                         </div>
                     </div>
 
@@ -94,9 +94,9 @@
 
                         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
 
-                            <h3>Chicago</h3>
+                            <h3>Grand Design</h3>
 
-                            <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+                            <p><b>The best inside your mind.</b></p>    
                         </div>
                     </div>
                 </ui:insert>
@@ -107,7 +107,9 @@
                         <!--<h2 class="w3-wide">SKYLAND</h2>-->
                         <img src="brand logo.jpg" style="width:20%"/>
                         <p class="w3-opacity"><i>FREE &sdot; JOYFUL</i></p>
-                        <p class="w3-justify">Description ...</p>
+                        <p class="w3-justify">
+                            Description ...
+                        </p>
                         <!--    
                         <div class="w3-row w3-padding-32">
                               
