--- a/web/spa-resort.xhtml
+++ b/web/spa-resort.xhtml
@@ -31,7 +31,7 @@
     </h:head>
 
     <h:body>
-<!-- Navbar -->
+        <!-- Navbar -->
         <ui:insert name="bar">
             <div class="w3-top">
 
@@ -53,6 +53,24 @@
 
                     <a href="faces/login.xhtml" class="w3-padding-large w3-hover-red w3-hide-small w3-right">RESERVATION</a>
                 </div></div>
+        </ui:insert>
+        <ui:insert name="content">
+            <div class="w3-container w3-content w3-center w3-padding-64" style="max-width: 800px; min-height:720px" id="band">
+                <h2 class="w3-wide w3-center">Spa &amp; Resort</h2>
+                <p class="w3-justify">
+                    Hong Kong Parkview offers some of the most sophisticated and technologically advanced fitness and sporting facilities in the city.<br/>
+
+                    The state of the art Spinning Studio offers guests and members an opportunity to race around Hong Kong without struggling with the 
+                    traffic or fighting the weather using the only VX system in Asia. The three level gymnasium offers the latest modern cardio equipment 
+                    as well as highly experienced trainers who are there to ensure you achieve the best results. The outdoor training area provides a unique 
+                    experience in the open air and on top of that there are tennis courts, children’s playrooms and swimming pools. Hong Kong Parkview also 
+                    offers an unsurpassed selection of classes and activities for all age groups and interests and are home to a host of innovative, 
+                    professional coaches and teachers who help members to socialise, stay in shape and enjoy the unique lifestyle we have to offer.
+
+
+                </p>
+
+            </div>
         </ui:insert>
     </h:body>
 </html>
