--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -166,7 +166,7 @@
                                         <p class="w3-opacity">Fri 27 Nov 2016</p>
 
                                         <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                        <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display = 'block'">Buy Tickets</button>
+                                        <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display = 'block'">Details</button>
                                     </div> 
                                 </div>
 
@@ -180,7 +180,7 @@
                                         <p class="w3-opacity">Sat 28 Nov 2016</p>
 
                                         <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                        <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display = 'block'">Buy Tickets</button>
+                                        <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display = 'block'">Details</button>
                                     </div> 
                                 </div>
 
@@ -194,7 +194,7 @@
                                         <p class="w3-opacity">Sun 29 Nov 2016</p>
 
                                         <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                        <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display = 'block'">Buy Tickets</button>
+                                        <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display = 'block'">Details</button>
                                     </div>
                                 </div>
 
@@ -239,9 +239,9 @@
                         <div class="w3-row w3-padding-32">
 
                             <div class="w3-col m6 w3-large w3-margin-bottom">
-                                <i class="fa fa-map-marker" style="width: 30px;" /> Chicago, US<br />
-                                <i class="fa fa-phone" style="width: 30px;" /> Phone: +00 151515<br />
-                                <i class="fa fa-envelope" style="width: 30px;"> </i> Email: mail@mail.com<br />
+                                <i class="fa fa-map-marker" style="width: 30px;" /> Hong Kong, Hong Kong<br />
+                                <i class="fa fa-phone" style="width: 30px;" /> Phone: +852 23456780<br />
+                                <i class="fa fa-envelope" style="width: 30px;"> </i> Email: clubms0@foxmail.com<br />
                             </div>
 
                             <div class="w3-col m6">
