--- a/web/art-culture.xhtml
+++ b/web/art-culture.xhtml
@@ -56,14 +56,16 @@
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width: 800px; min-height:720px" id="band">
                 <h2 class="w3-wide w3-center">Art &amp; Culture</h2>
                 <p class="w3-justify">
-                    Hong Kong Parkview is proud and honoured to host one of the city’s most diverse private art collections. <br/>
-                    The collection is on display for the pleasure of members and visitors alike and has been collected by over <br/>
-                    three generations of Hong Kong Parkview’s owning family. Spanning the Archaic Bronze Age, to Dynastic <br/>
-                    Buddhistic scrolls and sculptures, to modern art, sculptures, paintings and ceramics, these pieces have <br/>
-                    become an iconic and integral part of Hong Kong Parkview identity. You can visit these pieces throughout <br/>
+                    Hong Kong Parkview is proud and honoured to host one of the city’s most diverse private art collections. 
+                    The collection is on display for the pleasure of members and visitors alike and has been collected by over 
+                    three generations of Hong Kong Parkview’s owning family. Spanning the Archaic Bronze Age, to Dynastic 
+                    Buddhistic scrolls and sculptures, to modern art, sculptures, paintings and ceramics, these pieces have 
+                    become an iconic and integral part of Hong Kong Parkview identity. You can visit these pieces throughout 
                     the property and feel free to visit our Reading Room on the level 2.<br/>
                 </p>
 
+                <h2 ></h2>
+                
             </div>
         </ui:insert>
     </h:body>
