--- a/web/art-culture.xhtml
+++ b/web/art-culture.xhtml
@@ -46,7 +46,7 @@
                             <a href="faces/art-culture.xhtml" class="w3-bar-item w3-button">Art &amp; Culture</a>
                         </div>
                     </div>
-                    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+                    <a href="/Clubhouse_Management_System/#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
 
 
                     <a href="faces/login.xhtml" class="w3-padding-large w3-hover-red w3-hide-small w3-right">RESERVATION</a>
