--- a/web/restaurant.xhtml
+++ b/web/restaurant.xhtml
@@ -27,7 +27,7 @@
             body {font-family: "Lato", sans-serif}
             .mySlides {display: none}
         </style>
-        <title>Art &amp; Culture</title>
+        <title>Restaurant - Skyland</title>
     </h:head>
 
     <h:body>
@@ -56,18 +56,12 @@
         </ui:insert>
         <ui:insert name="content">
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width: 800px; min-height:720px" id="band">
-                <h2 class="w3-wide w3-center">Spa &amp; Resort</h2>
+                <h2 class="w3-wide w3-center">Restaurants</h2>
                 <p class="w3-justify">
-                    Hong Kong Parkview offers some of the most sophisticated and technologically advanced fitness and sporting facilities in the city.<br/>
-
-                    The state of the art Spinning Studio offers guests and members an opportunity to race around Hong Kong without struggling with the 
-                    traffic or fighting the weather using the only VX system in Asia. The three level gymnasium offers the latest modern cardio equipment 
-                    as well as highly experienced trainers who are there to ensure you achieve the best results. The outdoor training area provides a unique 
-                    experience in the open air and on top of that there are tennis courts, children’s playrooms and swimming pools. Hong Kong Parkview also 
-                    offers an unsurpassed selection of classes and activities for all age groups and interests and are home to a host of innovative, 
-                    professional coaches and teachers who help members to socialise, stay in shape and enjoy the unique lifestyle we have to offer.
-
-
+                    Skyland is home to seven dining outlets ranging from an authentic Japanese teppanyaki, to a poolside café. 
+                    Exclusive to members and residents, our restaurants offer a sense of elegance and privacy, and caters to all forms of 
+                    cravings and celebrations. Our team of experienced and knowlegeable chefs and sommeliers offer unsurpassed service and 
+                    cuisine with well assuredly matched wines, spirits and even imported Cuban cigars.
                 </p>
 
             </div>
