--- a/web/art-culture.xhtml
+++ b/web/art-culture.xhtml
@@ -64,7 +64,12 @@
                     the property and feel free to visit our Reading Room on the level 2.<br/>
                 </p>
 
-                <h2 ></h2>
+                <h2 class="w3-wide w3-center">READING ROOM</h2>
+                <p class="w3-justify">
+                    Our Reading Room is located on the level 2 of the Main Clubhouse and provides a peaceful environment for study or repose. 
+                    Feel free to stop by and peruse the volumes of books, magazines, encyclopedias and other fascinating articles that are housed 
+                    here for your reading pleasure. Opening hours are 1pm - 10pm .
+                </p>
                 
             </div>
         </ui:insert>
