--- a/web/company_news.xhtml
+++ b/web/company_news.xhtml
@@ -6,8 +6,28 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:panelGrid>
-            
+        <h:panelGrid columns="3">
+            <h:panelGroup>
+                Item
+            </h:panelGroup>
+            <h:panelGroup>
+                |
+            </h:panelGroup>
+            <h:panelGroup>
+                Description
+            </h:panelGroup>
+
+            <h:panelGroup>
+                Sauna Room
+            </h:panelGroup>
+            <h:panelGroup>
+                |
+            </h:panelGroup>
+            <h:panelGroup>
+                This is description.
+            </h:panelGroup>
+
+
         </h:panelGrid>
     </h:body>
 </html>
