--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -107,6 +107,7 @@
                         <!--<h2 class="w3-wide">SKYLAND</h2>-->
                         <img src="brand logo.jpg" style="width:20%"/>
                         <p class="w3-opacity"><i>JOYFUL &sdot; CHEERFUL</i></p>
+                        <h2 class="w3-wide w3-center">ABOUT US</h2>
                         <p class="w3-justify">
                             Skyland is the place help you to enjoy the daily life. Featuring comprehensive facilities, including gym room, 
                             swimming pool, sauna rooms, study rooms, and BBQ, give you the most comfortable place in Hong Kong. 
