--- a/web/officer_home_page.xhtml
+++ b/web/officer_home_page.xhtml
@@ -20,7 +20,6 @@
         </style>
         <!-- Icon Bar (Sidebar - hidden on small screens) --><nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
             <!-- Avatar image in top left corner -->
-            <img src="/w3images/avatar_smoke.jpg" style="width: 100%;" alt="" />
             <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
                 <i class="fa fa-home w3-xxlarge" />
 
@@ -35,6 +34,11 @@
                 <i class="fa fa-eye w3-xxlarge" />
 
                 <p>FACILITY</p>
+            </a>
+            <a href="officer_feedback.xhtml" class="w3-bar-item w3-button w3-padding-large w3-hover-black" target="main">
+                <i class="fa fa-envelope w3-xxlarge" />
+
+                <p>FEEDBACK</p>
             </a>
             <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
                 <i class="fa fa-envelope w3-xxlarge" />
@@ -66,7 +70,7 @@
             var myVar = setInterval(myTimer, 1000);
             function myTimer() {
                 var d = new Date();
-                document.getElementById("datetime").innerHTML = d.toDateString() +"<br/>"+ d.toLocaleTimeString();
+                document.getElementById("datetime").innerHTML = d.toDateString() + "<br/>" + d.toLocaleTimeString();
             }
         </script>
     </h:body>
