--- a/web/officer_home_page.xhtml
+++ b/web/officer_home_page.xhtml
@@ -25,12 +25,12 @@
 
                 <p>HOME</p>
             </a>
-            <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+            <a href="officer_user.xhtml" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
                 <i class="fa fa-user w3-xxlarge" />
 
                 <p>USER</p>
             </a>
-            <a href="login.xhtml" class="w3-bar-item w3-button w3-padding-large w3-hover-black" target="main">
+            <a href="officer_facility.xhtml" class="w3-bar-item w3-button w3-padding-large w3-hover-black" target="main">
                 <i class="fa fa-eye w3-xxlarge" />
 
                 <p>FACILITY</p>
@@ -40,7 +40,7 @@
 
                 <p>FEEDBACK</p>
             </a>
-            <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+            <a href="officer_message.xhtml" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
                 <i class="fa fa-envelope w3-xxlarge" />
 
                 <p>MESSAGE</p>
@@ -49,7 +49,7 @@
                 <div class="w3-dropdown-hover w3-hide-small w3-hover-red w3-right">
                     <button class="w3-padding-large w3-button"><h:outputLabel value="USER"/><i class="fa fa-caret-down" /></button>     
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="#" class="w3-bar-item w3-button">LOGOUT</a>
+                        <a href="index.xhtml" class="w3-bar-item w3-button">LOGOUT</a>
                     </div>
                 </div>  
             </p>
