--- a/web/officer_feedback.xhtml
+++ b/web/officer_feedback.xhtml
@@ -58,10 +58,10 @@
         <ui:insert class="content">
 
             <div class="w3-container w3-content w3-center w3-padding-64" style=" min-height:720px" id="feedback">
-                <h:panelGrid columns="2" style="border: solid 1px" columnClasses="col,col">
+                <h:panelGrid columns="2" style="border: solid 1px" columnClasses="col,col" width="35%">
 
                     <f:facet name="caption">
-                        <h:outputText value="FEEDBACK"/>
+                        <h:outputText value="Feedback"/>
                     </f:facet>
 
                     <h:outputLabel value="Name"/>
